2010-12-08  Xiaomei Ji  <xji@chromium.org>

Reviewed by David Hyatt.

        Fix backward mouse wheeling not working when scroll position is below 0.
        https://bugs.webkit.org/show_bug.cgi?id=50370

        Tests: fast/events/wheelevent-in-horizontal-scrollbar-in-rtl.html
               fast/events/wheelevent-in-vertical-scrollbar-in-rtl.html

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::wheelEvent):
2010-12-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Fix backward mouse wheeling not working when scroll position is below 0.
        https://bugs.webkit.org/show_bug.cgi?id=50370

        * fast/dom/horizontal-scrollbar-in-rtl-expected.txt:
        * fast/dom/horizontal-scrollbar-in-rtl.html:
        * fast/dom/vertical-scrollbar-in-rtl-expected.txt:
        * fast/dom/vertical-scrollbar-in-rtl.html:
        * fast/events/wheelevent-in-horizontal-scrollbar-in-rtl-expected.txt: Added.
        * fast/events/wheelevent-in-horizontal-scrollbar-in-rtl.html: Added.
        * fast/events/wheelevent-in-vertical-scrollbar-in-rtl-expected.txt: Added.
        * fast/events/wheelevent-in-vertical-scrollbar-in-rtl.html: Added.
        * platform/chromium/fast/dom/horizontal-scrollbar-in-rtl-expected.txt:
        * platform/chromium/fast/dom/vertical-scrollbar-in-rtl-expected.txt:
        * platform/chromium/fast/events/wheelevent-in-horizontal-scrollbar-in-rtl-expected.txt: Added.
        * platform/chromium/fast/events/wheelevent-in-vertical-scrollbar-in-rtl-expected.txt: Added.
        * platform/gtk/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:
        * platform/qt/fast/dom/horizontal-scrollbar-in-rtl-expected.txt:
        * platform/qt/fast/dom/vertical-scrollbar-in-rtl-expected.txt:
        * platform/win/Skipped:
        * platform/win/fast/dom/horizontal-scrollbar-in-rtl-expected.txt:
        * platform/win/fast/dom/vertical-scrollbar-in-rtl-expected.txt:


Canonical link: https://commits.webkit.org/63940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73529 268f45cc-cd09-0410-ab3c-d52691b4dbfc